--- a/Hopverkefni 2/style.css
+++ b/Hopverkefni 2/style.css
@@ -45,6 +45,15 @@ header{
     text-decoration: none; 
 }
 
+.vorulisti {
+    text-decoration: none;
+    color: inherit;
+}
+
+.vorulisti :hover {
+    text-decoration: none; 
+}
+
 }
 .listProduct .item img{
     width: 90%;
