--- a/Hopverkefni 2/style.css
+++ b/Hopverkefni 2/style.css
@@ -2,8 +2,9 @@ body{
     margin: 0;
     font-family: Poppins;
 }
+
 .container{
-    width: 900px;
+    width: 1200px;
     margin: auto;
     max-width: 90vw;
     text-align: center;
@@ -14,13 +15,21 @@ svg{
     width: 30px;
 }
 header{
+    background-color: #eee;
+    color: #353432;
+    padding: 20px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
 }
+
+h1{
+    font-size: larger;
+}
+
 .icon-cart{
     position: relative;
+    margin-right: 20px; 
 }
 .icon-cart span{
     position: absolute;
@@ -37,27 +46,30 @@ header{
 }
 .title{
     font-size: xx-large;
-}
-.listProduct .item img{
-    width: 90%;
-    filter: drop-shadow(0 50px 20px #0009);
+    margin-left: 20px;
 }
 .listProduct {
     display: grid;
     gap: 20px;
 }
-.listProduct .item{
-    background-color: #EEEEE6;
+.listProduct .item {
+    background-color: #eee;
     padding: 20px;
-    border-radius: 20px;
+    border-radius: 0px;
+    text-align: center;
+}
+.listProduct .item img {
+    width: 300px; 
+    height: 200px; 
+    object-fit: cover;
 }
 .listProduct .item h2{
     font-weight: 500;
     font-size: large;
 }
 .listProduct .item .price{
-    letter-spacing: 7px;
-    font-size: small;
+    letter-spacing: 0px;
+    font-size: medium;
 }
 .listProduct .item button{
     background-color: #353432;
@@ -81,7 +93,7 @@ header{
         transition: transform .5s;
 }
 .button-value {
-    border: 2px solid #E8BC0E;
+    border: 2px solid #353432;
     padding: 1em 2.2em;
     border-radius: 2em;
     background-color: transparent;
@@ -89,7 +101,7 @@ header{
     cursor: pointer;
   }
   .button-value.active {
-    background-color: #E8BC0E;
+    background-color: #353432;
     color: #ffffff;
   }
 
@@ -124,7 +136,7 @@ body.showCart .container{
     grid-template-columns: repeat(2, 1fr);
 }
 .cartTab button{
-    background-color: #E8BC0E;
+    background-color: #eee;
     border: none;
     font-family: Poppins;
     font-weight: 500;
@@ -233,6 +245,7 @@ a:visited {
 
 /* Set hover link color */
 a:hover {
-    color: #0e4ce8;
+    color: #353432;
     text-decoration: underline;
 }
+
